--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BASEURL = https://demorp-uat.teda.th 
+BASEURL = https://rp.teda.th 
 PORT=3010
-API_GETALLPROFILE=http://api-backend-uat.teda.th/idp/v1/GetAllProfile
-API_EMAIL=http://api-backend-uat.teda.th/idp/v1/SendEmail
+API_GETALLPROFILE=http://backend.teda.th/idp/v1/GetAllProfile
+API_EMAIL=http://backend.teda.th/idp/v1/SendEmail
